ceph/wordpress/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "wordpress.apps.shaker242.lab"
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
  tls:
  - hosts: 
    - "wordpress.apps.shaker242.lab"
    secretName: wordpress-tls
